<resources>
    <string name="app_name">WatchList</string>
    <string name="faildLogin">"Login Faild, Check The Inputs, Make Sure Your Account is Verified "</string>
    <string name="logout">Logout</string>
    <string name="name">Name:</string>
    <string name="eMail">E-Mail:</string>
    <string name="profilePic">The profile picture.</string>
    <string name="passWord">Password:</string>
    <string name="repeatPassword">Repeat Password:</string>
    <string name="invalidName">The name field is empty</string>
    <string name="invalidEmail">The E-mail is not valid</string>
    <string name="shortPW">The Password is shorter than 8 letters</string>
    <string name="notEqualPW">The Two Password Are Not Identical</string>
    <string name="RegesterFaild">Authentication failed.</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="updateTitle">New Title</string>
    <string name="updateContent">New Content</string>
    <string name="updateDate">New Date</string>
    <string name="updateButton">Update</string>
    <string name="exampleName">FistName</string>
    <string name="Register">Register</string>
    <string name="SelectDate">Select a Date</string>
    <string name="SelectTime">Select A Time</string>
    <string name="Date">Reminder Time</string>
    <string name="Content">Content</string>
    <string name="Create">Create</string>
    <string name="BackgroundLogo">BackgroundLogo</string>
    <string name="getImg">Select A Image</string>
    <string name="Title">Title</string>
    <string name="permissionDenied">Permission Denied</string>
    <string name="error">An Error Were Encountered  While Uploading Please Try Again</string>
    <string name="authError">You Need To Be Logged In To Create A Post</string>
    <string name="Platform">Platform</string>
    <string name="UpdatePlatform">New Platform</string>
    <string name="downloadError">Could Not Get The Picture</string>
    <string name="Delete">Delete</string>
    <string name="RegisterFailed">Register Failed</string>
    <string name="VerfiyEmail">Verfiy Your Email</string>
    <string name="RememberMe">Remember Me</string>
    <string name="Profile">Profile</string>
    <string name="My_List">My List</string>
    <string name="Newest">Newest</string>
    <string name="AddToMyList">Add To My List</string>
    <string name="AnonymousLogin">Skip Login</string>
    <string name="loginPassword">Password:</string>
    <string name="Login">Login</string>
    <string name="Unknown">Unknown</string>
    <string name="UnknownEmail">Unknown@U.com</string>
    <string name="loading">Loading</string>
    <string name="before_deleting">Do you really want to delete it?</string>
    <string name="invalidTitle">The Title Is Too Short</string>
    <string name="invalidContent">The Content Is Too Short</string>
    <string name="invalidPlatform">The Platform Name Is Too Short</string>
    <string name="shortTitle">The Title Can Not Be Empty</string>
    <string name="shortContent">The Content Can Not Be Empty</string>
    <string name="shortPlatform">The Platform Can Not Be Empty</string>
    <string name="nonLink">This Is Not A Youtube Link</string>
    <string name="shortLink">The Link Can Not Be Empty</string>
    <string name="goBackToLogin">Go To Login Menu</string>
    <string name="Trailer">Watch Trailer ▶</string>
    <string name="Link">Link</string>
    <string name="newLink">New Link</string>
    <string name="errorno">An Error Were Encountered While Trying To Play The Trailer</string>

</resources>