<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <VideoView
        android:id="@+id/videoView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/watchlist_logo"
                tools:ignore="MissingConstraints"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/eMail"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textColorLink="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/login_email"/>

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_rounded_corners"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="#000000"
                app:layout_constraintBottom_toTopOf="@id/passwordTextView"
                android:autofillHints="no" />

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:gravity="center|start"
                android:text="PASSWORD:"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textColorLink="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/login_password"/>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_rounded_corners"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="#000000"
                app:layout_constraintBottom_toTopOf="@id/login_button"
                 android:importantForAutofill="no" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50px"
                android:text="@string/Login"
                android:textSize="18sp"
                app:backgroundTint="#FF0000"
                app:layout_constraintBottom_toTopOf="@id/sign_in_button"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/register_button"/>


            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Register"
                android:textSize="18sp"
                app:backgroundTint="#03A9F4"
                app:layout_constraintBottom_toTopOf="@id/anonymousLoginBtn"/>



            <Button
                android:id="@+id/anonymousLoginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AnonymousLogin"
                android:textSize="18sp"
                app:backgroundTint="#FFAB00"
                app:layout_constraintBottom_toBottomOf="parent"/>






</androidx.constraintlayout.widget.ConstraintLayout>